fixtures/parser/invalid/03-prop-colon.fl
component MissingColon {
  surface {
    fill token(color.surface.default)
  }
}
